[package]
name = "cros-libva"
version = "0.0.13"
license = "BSD-3-Clause"
description = "Safe bindings over libva"
repository = "https://github.com/chromeos/cros-libva"
authors = ["The Chromium OS Authors"]
edition = "2021"

readme.workspace = true

[dependencies]
thiserror = "1"
bitflags = "2.5"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
regex = "1.11.1"

[dev-dependencies]
crc32fast = "1.2.1"

[features]
default = ["av1", "h265"]
av1 = []
h265 = []
libva_1_10_or_higher = []
libva_1_16_or_higher = []
libva_1_19_or_higher = []
libva_1_20_or_higher = []
libva_1_21_or_higher = []
